--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,9 @@ repos:
     hooks:
       - id: mypy
         args: [--ignore-missing-imports]
+        additional_dependencies: [types-requests]
   - repo: https://github.com/pycqa/pydocstyle
     rev: "6.1.1"
     hooks:
       - id: pydocstyle
+        args: [--ignore=D100]
