--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.8"
-requests = "^2.26.0"
-beautifulsoup4 = "^4.10.0"
+requests = "^2.25.0"
+beautifulsoup4 = "^4.9.0"
+googlesearch-python = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
