--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "~3.8"
 requests = "^2.25.0"
 beautifulsoup4 = "^4.9.0"
 googlesearch-python = "^1.0.1"
+pydantic = "^1.8.2"
 
 
 [tool.poetry.group.dev.dependencies]
