--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requests = "^2.25.0"
 beautifulsoup4 = "^4.9.0"
 googlesearch-python = "^1.0.1"
 pydantic = "^1.8.2"
+python-lsp-server = {version = "^1.3.3", optional = true}
 
 
 [tool.poetry.group.dev.dependencies]
@@ -20,6 +21,7 @@ flake8 = "^4.0.1"
 isort = "^5.10.1"
 mypy = "^0.910"
 pydocstyle = "^6.1.1"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
